// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mergeSubstepRowsMultiChannel > mock consolidate 1`] = `
[
  [
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": undefined,
      "source": {
        "postIngreds": {
          "A1": {
            "ingred1Id": 25,
          },
          "B1": {
            "ingred1Id": 25,
          },
          "C1": {
            "ingred1Id": 25,
          },
          "D1": {
            "ingred1Id": 25,
          },
          "E1": {
            "ingred1Id": 25,
          },
          "F1": {
            "ingred1Id": 25,
          },
          "G1": {
            "ingred1Id": 25,
          },
          "H1": {
            "ingred1Id": 25,
          },
        },
        "preIngreds": {
          "A1": {
            "ingred1Id": 30,
          },
          "B1": {
            "ingred1Id": 30,
          },
          "C1": {
            "ingred1Id": 30,
          },
          "D1": {
            "ingred1Id": 30,
          },
          "E1": {
            "ingred1Id": 30,
          },
          "F1": {
            "ingred1Id": 30,
          },
          "G1": {
            "ingred1Id": 30,
          },
          "H1": {
            "ingred1Id": 30,
          },
        },
        "well": "A1",
      },
      "volume": 5,
    },
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": undefined,
      "source": {
        "postIngreds": {
          "A2": {
            "ingred1Id": 31,
          },
          "B2": {
            "ingred1Id": 31,
          },
          "C2": {
            "ingred1Id": 31,
          },
          "D2": {
            "ingred1Id": 31,
          },
          "E2": {
            "ingred1Id": 31,
          },
          "F2": {
            "ingred1Id": 31,
          },
          "G2": {
            "ingred1Id": 31,
          },
          "H2": {
            "ingred1Id": 31,
          },
        },
        "preIngreds": {
          "A2": {
            "ingred1Id": 36,
          },
          "B2": {
            "ingred1Id": 36,
          },
          "C2": {
            "ingred1Id": 36,
          },
          "D2": {
            "ingred1Id": 36,
          },
          "E2": {
            "ingred1Id": 36,
          },
          "F2": {
            "ingred1Id": 36,
          },
          "G2": {
            "ingred1Id": 36,
          },
          "H2": {
            "ingred1Id": 36,
          },
        },
        "well": "A2",
      },
      "volume": 5,
    },
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": {
        "postIngreds": {
          "A12": {
            "ingred1Id": 10,
          },
          "B12": {
            "ingred1Id": 10,
          },
          "C12": {
            "ingred1Id": 10,
          },
          "D12": {
            "ingred1Id": 10,
          },
          "E12": {
            "ingred1Id": 10,
          },
          "F12": {
            "ingred1Id": 10,
          },
          "G12": {
            "ingred1Id": 10,
          },
          "H12": {
            "ingred1Id": 10,
          },
        },
        "preIngreds": {
          "A12": {},
          "B12": {},
          "C12": {},
          "D12": {},
          "E12": {},
          "F12": {},
          "G12": {},
          "H12": {},
        },
        "well": "A12",
      },
      "source": undefined,
      "volume": 10,
    },
  ],
]
`;

exports[`mergeSubstepRowsMultiChannel > mock distribute 1`] = `
[
  [
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": undefined,
      "source": {
        "postIngreds": {
          "A1": {
            "ingred1Id": 20,
          },
          "B1": {
            "ingred1Id": 20,
          },
          "C1": {
            "ingred1Id": 20,
          },
          "D1": {
            "ingred1Id": 20,
          },
          "E1": {
            "ingred1Id": 20,
          },
          "F1": {
            "ingred1Id": 20,
          },
          "G1": {
            "ingred1Id": 20,
          },
          "H1": {
            "ingred1Id": 20,
          },
        },
        "preIngreds": {
          "A1": {
            "ingred1Id": 30,
          },
          "B1": {
            "ingred1Id": 30,
          },
          "C1": {
            "ingred1Id": 30,
          },
          "D1": {
            "ingred1Id": 30,
          },
          "E1": {
            "ingred1Id": 30,
          },
          "F1": {
            "ingred1Id": 30,
          },
          "G1": {
            "ingred1Id": 30,
          },
          "H1": {
            "ingred1Id": 30,
          },
        },
        "well": "A1",
      },
      "volume": 10,
    },
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": {
        "postIngreds": {
          "A11": {
            "ingred1Id": 5,
          },
          "B11": {
            "ingred1Id": 5,
          },
          "C11": {
            "ingred1Id": 5,
          },
          "D11": {
            "ingred1Id": 5,
          },
          "E11": {
            "ingred1Id": 5,
          },
          "F11": {
            "ingred1Id": 5,
          },
          "G11": {
            "ingred1Id": 5,
          },
          "H11": {
            "ingred1Id": 5,
          },
        },
        "preIngreds": {
          "A11": {},
          "B11": {},
          "C11": {},
          "D11": {},
          "E11": {},
          "F11": {},
          "G11": {},
          "H11": {},
        },
        "well": "A11",
      },
      "source": undefined,
      "volume": 5,
    },
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": {
        "postIngreds": {
          "A12": {
            "ingred1Id": 5,
          },
          "B12": {
            "ingred1Id": 5,
          },
          "C12": {
            "ingred1Id": 5,
          },
          "D12": {
            "ingred1Id": 5,
          },
          "E12": {
            "ingred1Id": 5,
          },
          "F12": {
            "ingred1Id": 5,
          },
          "G12": {
            "ingred1Id": 5,
          },
          "H12": {
            "ingred1Id": 5,
          },
        },
        "preIngreds": {
          "A12": {},
          "B12": {},
          "C12": {},
          "D12": {},
          "E12": {},
          "F12": {},
          "G12": {},
          "H12": {},
        },
        "well": "A12",
      },
      "source": undefined,
      "volume": 5,
    },
  ],
]
`;

exports[`mergeSubstepRowsMultiChannel > mock mix 1`] = `
[
  [
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": {
        "postIngreds": {
          "A1": {
            "ingred1Id": 20,
          },
          "B1": {
            "ingred1Id": 20,
          },
          "C1": {
            "ingred1Id": 20,
          },
          "D1": {
            "ingred1Id": 20,
          },
          "E1": {
            "ingred1Id": 20,
          },
          "F1": {
            "ingred1Id": 20,
          },
          "G1": {
            "ingred1Id": 20,
          },
          "H1": {
            "ingred1Id": 20,
          },
        },
        "preIngreds": {
          "A1": {
            "ingred1Id": 30,
          },
          "B1": {
            "ingred1Id": 30,
          },
          "C1": {
            "ingred1Id": 30,
          },
          "D1": {
            "ingred1Id": 30,
          },
          "E1": {
            "ingred1Id": 30,
          },
          "F1": {
            "ingred1Id": 30,
          },
          "G1": {
            "ingred1Id": 30,
          },
          "H1": {
            "ingred1Id": 30,
          },
        },
        "well": "A1",
      },
      "source": {
        "postIngreds": {
          "A1": {
            "ingred1Id": 20,
          },
          "B1": {
            "ingred1Id": 20,
          },
          "C1": {
            "ingred1Id": 20,
          },
          "D1": {
            "ingred1Id": 20,
          },
          "E1": {
            "ingred1Id": 20,
          },
          "F1": {
            "ingred1Id": 20,
          },
          "G1": {
            "ingred1Id": 20,
          },
          "H1": {
            "ingred1Id": 20,
          },
        },
        "preIngreds": {
          "A1": {
            "ingred1Id": 30,
          },
          "B1": {
            "ingred1Id": 30,
          },
          "C1": {
            "ingred1Id": 30,
          },
          "D1": {
            "ingred1Id": 30,
          },
          "E1": {
            "ingred1Id": 30,
          },
          "F1": {
            "ingred1Id": 30,
          },
          "G1": {
            "ingred1Id": 30,
          },
          "H1": {
            "ingred1Id": 30,
          },
        },
        "well": "A1",
      },
      "volume": 10,
    },
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": undefined,
      "source": undefined,
      "volume": 10,
    },
  ],
]
`;

exports[`mergeSubstepRowsMultiChannel > mock transfer 1`] = `
[
  [
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": undefined,
      "source": {
        "postIngreds": {
          "A1": {
            "ingred1Id": 20,
          },
          "B1": {
            "ingred1Id": 20,
          },
          "C1": {
            "ingred1Id": 20,
          },
          "D1": {
            "ingred1Id": 20,
          },
          "E1": {
            "ingred1Id": 20,
          },
          "F1": {
            "ingred1Id": 20,
          },
          "G1": {
            "ingred1Id": 20,
          },
          "H1": {
            "ingred1Id": 20,
          },
        },
        "preIngreds": {
          "A1": {
            "ingred1Id": 30,
          },
          "B1": {
            "ingred1Id": 30,
          },
          "C1": {
            "ingred1Id": 30,
          },
          "D1": {
            "ingred1Id": 30,
          },
          "E1": {
            "ingred1Id": 30,
          },
          "F1": {
            "ingred1Id": 30,
          },
          "G1": {
            "ingred1Id": 30,
          },
          "H1": {
            "ingred1Id": 30,
          },
        },
        "well": "A1",
      },
      "volume": 10,
    },
    {
      "activeTips": {
        "labware": "someTiprackId",
        "well": "A6",
      },
      "dest": {
        "postIngreds": {
          "A12": {
            "ingred1Id": 10,
          },
          "B12": {
            "ingred1Id": 10,
          },
          "C12": {
            "ingred1Id": 10,
          },
          "D12": {
            "ingred1Id": 10,
          },
          "E12": {
            "ingred1Id": 10,
          },
          "F12": {
            "ingred1Id": 10,
          },
          "G12": {
            "ingred1Id": 10,
          },
          "H12": {
            "ingred1Id": 10,
          },
        },
        "preIngreds": {
          "A12": {},
          "B12": {},
          "C12": {},
          "D12": {},
          "E12": {},
          "F12": {},
          "G12": {},
          "H12": {},
        },
        "well": "A12",
      },
      "source": undefined,
      "volume": 10,
    },
  ],
]
`;
